// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Time renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          disabled={true}
          placeholder=" "
          type="time"
          value="Text"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ bBBlgz"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ ccmqJI"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ esZogK"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder=" "
          readOnly={true}
          type="time"
          value="Read only text"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ bIZKWq"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ ddFhdd"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ dUhAAf"
          dir="rtl"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-imdKTc dWOyyj"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder="medium"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder="large"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ dxsTVJ"
          placeholder="xlarge"
          type="time"
        />
        <label
          className="sc-imdKTc hgJXpw"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ kvrIuy"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ eCQCpR"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE ktmlgL"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
